--- a/cryptokernel/Makefile
+++ b/cryptokernel/Makefile
@@ -9,6 +9,9 @@ SOURCES_CPP = \
 	generator/generator.cpp \
 	generator/dev_random.cpp
 
+# Static library
+TARGET_LIB = cryptokernel.a
+
 # Tests
 TEST_SOURCES_CPP = \
 	test_dev_random.cpp \
@@ -17,8 +20,9 @@ TEST_SOURCES_CPP = \
 	test_cryptokernel.cpp
 
 
-# Compiler
+# Compiler and library archiever
 GPP = g++ -Wall -std=c++11
+AR = ar cr
 
 # Objects and target files
 OBJECTS = $(SOURCES_CPP:.cpp=.o)
@@ -28,11 +32,16 @@ TEST_TARGETS = $(basename $(TEST_SOURCES_CPP))
 # Targets
 .PHONY: all clean
 
-all: $(OBJECTS)
+all: $(TARGET_LIB)
 
 clean:
-	rm -f $(OBJECTS) $(TEST_OBJECTS) $(TEST_TARGETS)
+	rm -f "$(TARGET_LIB)" $(TEST_OBJECTS) $(TEST_TARGETS)
 
+
+$(TARGET_LIB): $(TARGET_LIB)($(OBJECTS))
+
+$(TARGET_LIB)(%.o): %.o
+	$(AR) "$@" "$<"
 
 # Objects compilation
 %.o: %.cpp
@@ -42,7 +51,7 @@ clean:
 # Tests targets
 tests: $(TEST_TARGETS)
 
-$(TEST_TARGETS): %: %.o $(OBJECTS)
+$(TEST_TARGETS): %: %.o $(TARGET_LIB)
 	$(GPP) -o "$@" $^
 
 $(TEST_OBJECTS): %.o: %.cpp
